--- a/css/style.css
+++ b/css/style.css
@@ -860,7 +860,7 @@ a:focus {
   left: 0px;
   position: absolute;
   content: "";
-  background: url("../images/bg/bg-2.jpg") no-repeat 50% 50%;
+  background: url("../images/bg/image.png") no-repeat 50% 50%;
 }
 
 .testimonial .slick-dots {
